--- a/all_static/css/api_docs.css
+++ b/all_static/css/api_docs.css
@@ -17,6 +17,9 @@ code, kbd, pre, samp {
 
 code {
 	white-space: pre;
+	padding: 20px;
+    font-weight: 200;
+    font-size: 14px;
 }
 
 pre, blockquote {
