--- a/all_static/css/ipython-notebook-custom.css
+++ b/all_static/css/ipython-notebook-custom.css
@@ -128,6 +128,7 @@ div.input_area>div.highlight>pre {
 }
 .cell div.output_subarea.output_html.rendered_html {
     overflow-x: scroll;
+    overflow-y: hidden;
     max-width: 100%;
   /*  overflow-y: scroll; */
   /*  max-height: 300px;   */
@@ -227,3 +228,9 @@ div.input_area>div.highlight>pre {
     line-height: 125%;
     font-size: 100%;
   }
+
+code{
+  padding: 20px !important;
+  font-weight: 200 !important;
+  font-size: 14px!important;
+}
