cleaned up notebooks page

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -254,6 +254,17 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </div>
 
 </div>
+
+<hr>
+<h4 id="using-offline"><a class="no_underline plot-blue" href="#using-offline">Using Offline</a></h4>
+<div class="row">
+<p>Plotly is a web-connected service by default, but can also work entirely offline within RStudio, IPython notebook, and MATLAB.</p>
+<ul>
+<li><a href="http://purchasing.plot.ly/plotly-offline-r">Start a free 14 day Trial of plotly offline for RStudio and Shiny</a></li>
+<li><a href="https://plot.ly/r/offline/">plotly offline documentation</a></li>
+</ul>
+</div>
+
 {% else %}
 
 {% if layout_options %}
@@ -330,6 +341,36 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </ul>
 </div>
 </div>
+
+{% if page.language == 'ggplot2' or page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
+<hr>
+<h4 id="using-offline"><a class="no_underline plot-blue" href="#using-offline">Using Offline</a></h4>
+<div class="row">
+<p>Plotly is a web-connected service by default, but can also work entirely offline within RStudio, IPython notebook, and MATLAB.</p>
+<div class="six columns">
+<ul>
+
+{% if page.language == 'ggplot2' %}
+<li><a href="http://purchasing.plot.ly/plotly-offline-r">Start a free 14 day Trial of plotly offline for RStudio and Shiny</a></li>
+<li><a href="https://plot.ly/r/offline/">plotly offline documentation</a></li>
+{% endif %}
+
+{% if page.language == 'python' or page.language == 'matplotlib' %}
+	<li><a href="http://purchasing.plot.ly/plotly-offline-ipython">Start a free 14 day Trial of plotly offline for IPython notebook</a></li>
+	<li><a href="https://plot.ly/python/offline/">plotly offline documentation</a></li>
+{% endif %}
+
+{% if page.language == 'matlab' %}
+	<li><a href="http://purchasing.plot.ly/plotly-offline-matlab">Start a free 14 day Trial of plotly offline for MATLAB/a></li>
+	<li><a href="https://plot.ly/matlab/offline/">plotly offline documentation</a></li>
+{% endif %}
+
+</ul>
+</div>
+</div>
+{% endif %}
+
+
 {% endif %}
 {% endif %}
 
