--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
 <div class="plotly-footer">
+	{% include plotly_offline_cta.html %}
 	<div class="row footerarea footer-top">
 		<div class="one column footcolumn space"> </div>
 		<div class="two columns footcolumn respfooter">
