--- a/all_static/css/layout_block.css
+++ b/all_static/css/layout_block.css
@@ -8,8 +8,8 @@ HEADER
   line-height: 78px;
   display: block;
   min-width: 1080px;
-  border-bottom-color: #cccccc;
-  border-bottom-width: 1px;
+  border-bottom-color: #ffffff;
+  border-bottom-width: 0px;
   border-bottom-style: solid;
 }
 
