minor dashboard changes

--- a/_includes/marketplace-dashboard-nav.html
+++ b/_includes/marketplace-dashboard-nav.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="./marketplace-kpi-metrics-dashboard.html">
+      <a class="navbar-brand" href="https://plot.ly/python/">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
       <a class="navbar-brand" >Marketplace KPI Dashboard - {{page.name}}</a>
