--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,50 +2,88 @@
 
     <div class="headerbar-leftside">
         <a href="https://plot.ly/feed/" class="logo">
-            <i class="ploticon-plotlylogo"></i> 
+            <i class="ploticon-plotlylogo"></i>
             <em>plotly</em>
         </a>
     </div>
 
   <div class="headerbar-rightside hidesmall">
 
-      
+      <a href="https://plot.ly/feed/" target="_self">
+        <span class="headerbar-nav-item ">Sign In</span>
+      </a>
+
       <a class="button"
-         href="https://plot.ly/plot"
-         target="_self">
+         href="https://plot.ly/plot">
           NEW PROJECT
+      </a>
+
+      <a class="button"
+         href="https://plot.ly/products/enterprise/get-in-touch/">
+          REQUEST DEMO
       </a>
   </div>
 
   <div class="headerbar-nav hidesmall">
-      <a href="https://plot.ly/plot" class="link --headerbar" target="_self">
-      <span class="headerbar-nav-item ">Workspace</span>
-      </a>
-  
-      <a href="https://plot.ly/feed/" class="link --headerbar" target="_self">
+
+      <a href="https://plot.ly/feed/" target="_self">
       <span class="headerbar-nav-item ">Explore</span>
       </a>
-  
-      <a href="https://plot.ly/api/" class="link --headerbar" target="_self">
+
+      <a href="https://plot.ly/api/" target="_self">
+      <span class="headerbar-nav-item ">Products</span>
+      </a>
+
+          <nav id="products-nav" role="menu" class="dropdown-menu">
+            <a href="https://plot.ly/products/cloud/" class="dropdown-menu-item" target="_self">CLOUD</a>
+            <a href="https://plot.ly/products/desktop/" class="dropdown-menu-item" target="_self">DESKTOP</a>
+            <a href="https://plot.ly/products/on-premise/" class="dropdown-menu-item" target="_self">ON PREMISE</a>
+            <a href="https://plot.ly/product/plotlyjs/" class="dropdown-menu-item" target="_self">PLOTLY.JS</a>
+            <a href="https://plot.ly/products/add-ons/" class="dropdown-menu-item" target="_self">ADD-ONS</a>
+          </nav>
+
+      <a href="https://plot.ly/api/" target="_self">
+      <span class="headerbar-nav-item ">Industries</span>
+      </a>
+
+          <nav id="industries-nav" role="menu" class="dropdown-menu">
+              <a href="https://plot.ly/products/industries/finance/" class="dropdown-menu-item" target="_self">FINANCE</a>
+              <a href="https://plot.ly/products/industries/insurance/" class="dropdown-menu-item" target="_self">INSURANCE</a>
+              <a href="https://plot.ly/products/industries/aerospace/" class="dropdown-menu-item" target="_self">AEROSPACE</a>
+              <a href="https://plot.ly/products/industries/energy/" class="dropdown-menu-item" target="_self">ENERGY</a>
+              <a href="https://plot.ly/products/industries/research-and-development/" class="dropdown-menu-item" target="_self">RESEARCH &amp; DEVELOPMENT</a>
+              <a href="https://plot.ly/products/industries/automotive/" class="dropdown-menu-item" target="_self">AUTOMOTIVE</a>
+              <a href="https://plot.ly/products/industries/government-and-public/" class="dropdown-menu-item" target="_self">GOVERNMENT</a>
+              <a href="https://plot.ly/products/industries/pharma/" class="dropdown-menu-item" target="_self">PHARMA &amp; COMPUTATIONAL BIOLOGY</a>
+              <a href="https://plot.ly/products/industries/journalism/" class="dropdown-menu-item" target="_self">JOURNALISM</a>
+              <a href="https://plot.ly/products/industries/business-intelligence/" class="dropdown-menu-item" target="_self">BUSINESS INTELLIGENCE</a>
+          </nav>
+
+      <a href="https://plot.ly/api/" target="_self">
       <span class="headerbar-nav-item ">API</span>
       </a>
-  
-      <a href="https://plot.ly/product/enterprise/" class="link --headerbar" target="_blank">
-      <span class="headerbar-nav-item ">Enterprise</span>
-      </a>
+
+          <nav class="dropdown-menu">
+              <a href="/python" class="dropdown-menu-item" target="_self">PYTHON</a>
+              <a href="/r" class="dropdown-menu-item" target="_self">R</a>
+              <a href="/matlab" class="dropdown-menu-item" target="_self">MATLAB</a>
+              <a href="/javascript-graphing-library" class="dropdown-menu-item" target="_self">JAVASCRIPT</a>
+              <a href="/api" class="dropdown-menu-item" target="_self">MORE</a>
+          </nav>
+
   </div>
-  
+
   <div class="hamburger">
 		<a href='#popmenufull' onclick='return clickfullmenu();'>
 			<img src="http://i.imgur.com/o7Mxj6T.png" alt="Menu" id="hamburgerlink" onmouseover="this.src='http://i.imgur.com/gj2TtuI.png'" onmouseout="this.src='http://i.imgur.com/o7Mxj6T.png'">
 		</a>
-		
+
 	</div>
 
 </div>
 
 <!-- POP UP MENU -->
-	<div id="popmenufull" style="display:none;">	 
+	<div id="popmenufull" style="display:none;">
 			<div class="popupheader">
 					<div class="headerbar-leftside">
 						<a href="/feed/" class="logo">
@@ -55,11 +93,11 @@
 					</div>
 
 
-					
+
 					<a href='#popmenufull' onclick='return clickfullmenu();'>
 					<div class="close"><img alt="close" src="http://i.imgur.com/esVZHwn.png"></div> </a>
-			</div>	
-						
+			</div>
+
 			<div class="popupmenu">
 				<ul>
 					<li><a href="https://plot.ly/plot">Workspace</a></li>
