--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -39,7 +39,7 @@
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{rubyclass}}" href="/ruby{{page_type}}"><img src="{{ site.staticurl }}/images/ruby-small.png" alt="ruby" class="lang_nav_thum">RUBY</a></div>
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "php" %}
-			<div class="lang_nav_button-div"><a class="lang_nav_button {{rubyclass}}" href="/ruby{{page_type}}"><img src="{{ site.staticurl }}/images/php-small.png" alt="php" class="lang_nav_thum">PHP</a></div>
+			<div class="lang_nav_button-div"><a class="lang_nav_button {{rubyclass}}" href="/php{{page_type}}"><img src="{{ site.staticurl }}/images/php-small.png" alt="php" class="lang_nav_thum">PHP</a></div>
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "matlab" %}
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{matclass}}" href="/matlab{{page_type}}"><img src="{{ site.staticurl }}/images/MATLAB-small.png" alt="matlab" class="lang_nav_thum">MATLAB</a></div>
