Fix for API Language Splash Page Layout

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -265,7 +265,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "layout_opt" %}
-	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
 	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
 	{% assign counter=counter | plus:1 %}
 {% endif %}
@@ -284,7 +284,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "file_settings" %}
-	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
 	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
 	{% assign counter=counter | plus:1 %}
 {% endif %}
@@ -303,7 +303,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "tutorial" %}
-	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
 	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
 	{% assign counter=counter | plus:1 %}
 {% endif %}
@@ -322,7 +322,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "get_request" %}
-	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
 	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
 	{% assign counter=counter | plus:1 %}
 {% endif %}
@@ -332,4 +332,3 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </div>
 {% endif %}
 {% endif %}
-
