fork on github link

--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -83,3 +83,12 @@ body.application hr {
   font-weight: 100 !important;
   letter-spacing: 0.2rem !important;
 }
+
+#forklink{
+  font-weight: 300;
+  font-family: "Open sans",verdana,arial,sans-serif;
+  font-size: 14px;  
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+}
