change urls from /javascript-graphig-library/ to /javascript/

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 				<li><a  href="https://plot.ly/api/" target="_self">Documentation</a></li>
 				<li><a  href="https://plot.ly/api/" target="_self">API Libraries</a></li>
 				<li><a  href="https://plot.ly/rest/" target="_self">REST APIs</a></li>
-				<li><a  href="https://plot.ly/javascript-graphing-library/" target="_self">Plotly.js</a></li>
+				<li><a  href="https://plot.ly/javascript/" target="_self">Plotly.js</a></li>
 				<li><a  href="https://plot.ly/workshop/" target="_self">Hardware</a></li>
 			</ul>
 		</div>
