--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -1,8 +1,8 @@
 {% if page.language != "r" %}
 	<div class="lang_nav row">
 	{% assign page_type  = page.permalink | remove_first: page.language %}
-	{% if page.permalink contains "javascript-graphing-library" %}
-		{% assign page_type  = page.permalink | remove_first: "javascript-graphing-library" %}
+	{% if page.permalink contains "javascript" %}
+		{% assign page_type  = page.permalink | remove_first: "javascript" %}
 	{% endif %}
 
 	{% if page.language == "python" %}
@@ -52,7 +52,7 @@
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{ggplotclass}}" href="/ggplot2{{page_type}}"><img src="{{ site.staticurl }}/images/ggplot.png" alt="ggplot2" class="lang_nav_thum">ggplot2</a></div>
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "plotly_js" %}
-			<div class="lang_nav_button-div"><a class="lang_nav_button {{plotjsclass}}" href="/javascript-graphing-library{{page_type}}">{ } plotly.js</a></div>
+			<div class="lang_nav_button-div"><a class="lang_nav_button {{plotjsclass}}" href="/javascript{{page_type}}">{ } plotly.js</a></div>
 		{% endif %}
 	{% endfor %}
 
