another javascript-graphing-library -> javascript url change

--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -21,7 +21,7 @@
 		{% assign matplotclass = "lang_nav_act" %}
 	{% elsif page.url contains "ggplot2" %}
 		{% assign ggplotclass = "lang_nav_act" %}
-	{% elsif page.url contains "javascript-graphing-library" %}
+	{% elsif page.url contains "javascript" %}
 		{% assign plotjsclass = "lang_nav_act" %}
 	{% endif %}
 
