Change header to reflect the site-wide one
- Replace organize with explore
- Add products/industries/api
- Addition of drop down menus
- New project and request demo buttons

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -3,21 +3,21 @@ HEADER STYLING
 **************************/
 
 .headerbar-leftside {
-    margin-left: 70px;
-    display: inline-block;
-    float: left;
-    max-width: 200px;
-    white-space: nowrap;
-    margin-right: 70px;
-    height: 78px;
-    line-height: 78px;
+  margin-left: 70px;
+  display: inline-block;
+  float: left;
+  max-width: 200px;
+  white-space: nowrap;
+  margin-right: 70px;
+  height: 78px;
+  line-height: 78px;
 }
 
 .logo{
-    font-size: 26px !important;
-    font-weight: 200;
-    color: #447BDC;
-    text-decoration: none;
+  font-size: 26px !important;
+  font-weight: 200;
+  color: #447BDC;
+  text-decoration: none;
 }
 
 .logo:hover{
@@ -25,7 +25,7 @@ HEADER STYLING
 }
 
 .ploticon-plotlylogo {
-    font-family: "plotlylogo";
+  font-family: "plotlylogo";
 }
 
 .logo em {
@@ -33,28 +33,28 @@ HEADER STYLING
 }
 
 .headerbar-rightside {
-    display: inline-block;
-    float: right;
-    margin-left: 0px;
-    max-width: 500px;
-    white-space: nowrap;
-    margin-right: 70px;
+  display: inline-block;
+  float: right;
+  margin-left: 0px;
+  max-width: 500px;
+  white-space: nowrap;
+  margin-right: 70px;
 /*  margin-top: 25px; */
 }
 
 .headerbar-nav {
-    display: inline-block;
-    vertical-align: super;
+  display: inline-block;
+  vertical-align: super;
 }
 
 .headerbar-nav-item {
-    color: #69738a;
-    display: inline-block;
-    font-size: 16px;
-    padding-left: 20px;
-    padding-right: 20px;
-    text-align: center;
-    font-family: "Open sans",verdana,arial,sans-serif;
+  color: #69738a;
+  display: inline-block;
+  font-size: 16px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  font-family: "Open sans",verdana,arial,sans-serif;
   text-decoration: none;
 }
 
@@ -83,32 +83,10 @@ HEADER STYLING
 /***********************
 DROP-DOWN MENU
 ************************/
-.headernav-nav-item{
-  color: #69738a;
-  line-height: 78px;
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: center;
-  display: inline-block;
-}
-
-.headernav-nav-item:hover{
-  color: #447bdc;
-}
-
 .dropdown {
-    position: relative;
-    display: inline-block;
-    font-size: 10px;
-    line-height: 28px;
-    background-color: #fff;
-    padding: 0 10px;
-    border-radius: 2px;
-    overflow-y: visible;
-}
-
-.dropdown:after, .dropdown:before {
-    box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  overflow-y: visible;
 }
 
 .dropdown-menu {
@@ -118,29 +96,59 @@ DROP-DOWN MENU
   min-width: 150px;
   border: 1px solid rgba(0,0,0,.2);
   margin: 0;
+  top: 65px;
+  background-color: #fff;
+  padding: 0 10px;
+  border-radius: 2px;
+  padding: 5px 15px;
+  box-shadow: 2px 2px 4px rgba(0,0,0,.1);
+}
+
+.dropdown-menu:after, .dropdown-menu:before {
+  box-sizing: border-box;
 }
 
 .dropdown-menu-item {
   border-bottom: 1px solid #E7E8E9;
   font-weight: 600;
+  display: block;
+  clear: both;
+  font-size: 16px;
+  line-height: 28px;
 }
 
-.dropdown-menu-item a {
+.dropdown-menu-item:last-child {
+  border-bottom: 0px none #E7E8E9;
+}
+
+.dropdown-menu-item{
   display: block;
   padding: 4px 6px;
   margin: 0;
   white-space: nowrap;
-  width: 100%;
+  width: 90%;
   text-align: left;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 21px;
   color: #5D667A;
   text-decoration: none;
   cursor: pointer;
 }
 
-.dropdown-menu-item a:hover {
+.dropdown-menu-item:hover {
   color: #447bdc;
+}
+
+.carret{
+    width: 0;
+    height: 0;
+    border-top: 4px solid #000;
+    border-left: 4px solid transparent;
+    margin-left: 2px;
+    display: inline-block;
+    vertical-align: middle;
+    content: "";
+    box-sizing: border-box;
 }
 
 /***********************
@@ -164,26 +172,26 @@ FOOTER STYLING
 **************************/
 
 .footer-bottom {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .footerarea h6 {
-    color: #447bdc;
-    font-size: 13px;
-    font-weight: 700;
-    padding-bottom: 0px;
-    text-align: left;
-    text-transform: uppercase;
-    line-height: 8px;
+  color: #447bdc;
+  font-size: 13px;
+  font-weight: 700;
+  padding-bottom: 0px;
+  text-align: left;
+  text-transform: uppercase;
+  line-height: 8px;
 }
 
 .footerarea li, .footerarea a, .footerarea p{
-    color: #8c97af;
-    font-size: 12px;
-    font-weight: 400;
-    list-style: none;
-    line-height: 4px;
-    margin-top: 15px;
+  color: #8c97af;
+  font-size: 12px;
+  font-weight: 400;
+  list-style: none;
+  line-height: 4px;
+  margin-top: 15px;
 }
 
 @media (max-width: 550px) {
@@ -216,20 +224,18 @@ FOOTER STYLING
   padding-right: 8px;
 }
 
-
 /***********************
 NAVIGATION BAR STYLING
 ***********************/
 
 .navigation-bar p, .navigation-bar a {
-    font-weight: 800;
-    margin-top: 10px;
-    text-transform: uppercase;
-    line-height: 40px;
-    text-decoration: none;
+  font-weight: 800;
+  margin-top: 10px;
+  text-transform: uppercase;
+  line-height: 40px;
+  text-decoration: none;
   display: inline;
   font-size: 13px
-
 }
 .navigation-bar a{
   color: #447bdc;
@@ -681,6 +687,10 @@ POP-UP MENU STYLING
   width: 30px;
   margin-right: 40px;
   margin-top: 20px;}
+
+.sub-popmenu a{
+  font-size: 20px;
+}
 
 /****************
 TUTORIAL STYLING
