Header Simplification - now only one
No splash page header. only one throughout the api pages

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,9 @@
 	{% include head.html %}
 	<body>
 	<div class="allcontent">
-		{% include header.html %}		
+		{% include header.html %}
+		{% include banner-image.html %}
+		{% include navigation-bar.html %}	
 
 		<div class="sectionseparator_bg">
 			<div class="bigcontainer">
@@ -14,7 +16,7 @@
 					<h1 class="centered" {% if page.language == "plotly_js" %}style="margin-top:-200px;"{% endif %}>
 						{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}
 					</h1>
-					{% include lang-navigation.html %}				
+					{% include lang-navigation.html %}
 				{% endif %}
 				<div class="row">
 
@@ -26,13 +28,13 @@
 			</div>
 		</div>
 	</div>
-	
+
 	{% if page.language == "plotly_js" %}
 		<img width="250" src="{{ site.staticurl }}/images/browser_support.png">
 		<p style="text-align: center;">
 			<b style="color:#447adb;">plotly.js</b> runs on all SVG-compatible browsers
 		</p>
-	{% endif %}	
+	{% endif %}
 
     {% include footer.html %}
 	</body>
