--- a/_layouts/getstart-base.html
+++ b/_layouts/getstart-base.html
@@ -4,6 +4,8 @@
 	<body>
 		<div class="allcontent">
 			{% include header.html %}
+			{% include banner-image.html %}
+			{% include navigation-bar.html %}
 			{% include ad-text.html %}
 
 			<div class="sectionseparator_bg">
