--- a/_layouts/getstart.html
+++ b/_layouts/getstart.html
@@ -4,13 +4,15 @@
 	<body>
 	<div class="allcontent">
 		{% include header.html %}
+		{% include banner-image.html %}
+		{% include navigation-bar.html %}
 		{% include ad-text.html %}
 
 		<div class="sectionseparator_bg">
 			<div class="container">
 
 				<div class="row">
-				<div class="getstartarea">				
+				<div class="getstartarea">
 
 				{{ content }}
 
