--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -10,6 +10,8 @@
 	<body>
 		<div class="allcontent">
 			{% include header.html %}
+			{% include banner-image.html %}
+			{% include navigation-bar.html %}
 
 			<div class="sectionseparator_white">
 				<div class="container">
