--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 	{% include head.html %}
-	
+
 	<body>
 		<div class="allcontent">
 			{% include header.html %}
-			
+			{% include banner-image.html %}
+			{% include navigation-bar.html %}
+
 			<div class="sectionseparator_bg">
-				
+
 				<div class="container">
-					{{ content }}					
-					
+					{{ content }}
+
 				</div>
 			</div>
 		</div>
     {% include footer.html %}
 	</body>
-	
+
 </html>
