* Merged Ad-text and banner-image include * removed h1 negative margin * Moved ad-text to layout instead of pages

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,23 +4,19 @@
 	<body>
 	<div class="allcontent">
 		{% include header.html %}
-		{% include banner-image.html %}
-		{% include navigation-bar.html %}	
+		{% include ad-text.html %}
+		{% include navigation-bar.html %}
 
 		<div class="sectionseparator_bg">
 			<div class="bigcontainer">
 
-				{% include ad-text.html %}
-
 				{% if page.language != "r" %}
-					<h1 class="centered" {% if page.language == "plotly_js" %}style="margin-top:-200px;"{% endif %}>
+					<h1 class="centered" {% if page.language == "plotly_js" %}{% endif %}>
 						{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}
 					</h1>
 					{% include lang-navigation.html %}
 				{% endif %}
 				<div class="row">
-
-
 
 				{{ content }}
 
@@ -36,6 +32,6 @@
 		</p>
 	{% endif %}
 
-    {% include footer.html %}
+  {% include footer.html %}
 	</body>
 </html>
