Increase visibility of plotlyjs version number

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -978,7 +978,7 @@ PLOTLY.JS VERSION NUMBER
 ************************/
 .version-number{
   margin-top: 10px;
-      color: white;
+      color: grey;
       opacity: 0.6;
 }
 
