Plotly_js button responsiveness fix

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -990,6 +990,14 @@ PLOTLY.JS VERSION NUMBER
   margin: 0px 30px;
 }
 
+@media (max-width: 700px){
+  .plotlyjs-download{
+    padding: 5px 0px;
+    margin: 0px 0px;
+    min-width: 98%;
+  }
+}
+
 /***************************
 SYNTAX HIGHLIGHTER OVERRIDES
 ***************************/
