--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,9 +11,11 @@
 			<div class="bigcontainer">
 
 				{% if page.language != "r" %}
+					{% unless page.ignore_header %}
 					<h1 class="centered" {% if page.language == "plotly_js" %}{% endif %}>
 						{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}
 					</h1>
+					{% endunless %}
 					{% include lang-navigation.html %}
 				{% endif %}
 				<div class="row">
