adding fin_analysis as nbs

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -9,6 +9,8 @@
 {% assign chart_events = true %}
 {% elsif page.display_as == "3d_charts" %}
 {% assign 3d_charts = true %}
+{% elsif page.display_as == "financial_analysis" %}
+{% assign financial_analysis = true %}
 {% elsif page.display_as == "multiple_axes" %}
 {% assign multiple_axes = true %}
 {% endif %}
@@ -143,6 +145,25 @@
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "3d_charts" %}
+<a href="/{{page.permalink}}">
+<div class="alltutcol">
+<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<div class="titlecenter">
+<h5 class="centered"> {{page.name}} </h5>
+</div>
+</div>
+</a>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
+
+{% if financial_analysis %}
+<hr>
+<h4 id="maps"><a class="no_underline plot-blue" href="#maps">Financial Analysis</a></h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "financial_analysis" %}
 <a href="/{{page.permalink}}">
 <div class="alltutcol">
 <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
