--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -42,6 +42,7 @@
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "php" %}
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{rubyclass}}" href="/php{{page_type}}"><img src="{{ site.staticurl }}/images/php-small.png" alt="php" class="lang_nav_thum">PHP</a></div>
+		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "pandas" %}
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{pdclass}}" href="/pandas{{page_type}}"><img src="{{ site.staticurl }}/images/pandas-small.png" alt="pandas" class="lang_nav_thum">PANDAS</a></div>
 		{% endif %}
