--- a/all_static/css/reference.css
+++ b/all_static/css/reference.css
@@ -1,3 +1,21 @@
 code {
     white-space: inherit;
 }
+
+.toc ul {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.toc li {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.toc {
+    border-right: thin rgb(230,230,230) solid;
+}
