--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -2,37 +2,39 @@
     <ul>
     {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "type" %}
         <li>
-            <a id="{{parentlink}}-{{obj[0]}}" href="#{{parentlink}}-{{obj[0]}}">
-                <b class="attribute-name">{{ obj[0] }}</b>
+            <a class="attribute-name" id="{{parentlink}}-{{obj[0]}}" href="#{{parentlink}}-{{obj[0]}}">
+                {{ obj[0] }}
             </a>
 
-
-            {% if obj[1].valType %}
-                {% if obj[1].valType == "enumerated" %}
-                    (<code class="attribute-type">{{ obj[1].valType }} -
-                    {% for value in obj[1].values %}
-                        {% if value != false and value != true %}
-                        <code>"{{value}}"</code>
-                        {% else %}
-                        <code>{{value}}</code>
-                        {% endif %}
-                        {% unless forloop.last %}
-                        |
-                        {% endunless %}
-                    {% endfor %}
-                    </code>)
-                {% else %}
-                (<code class="attribute-type">{{ obj[1].valType }}</code>)
+            {% if display_type %}
+                {% if obj[1].valType %}
+                    {% if obj[1].valType == "enumerated" %}
+                        (<code class="attribute-type">{{ obj[1].valType }} -
+                        {% for value in obj[1].values %}
+                            {% if value != false and value != true %}
+                            <code>"{{value}}"</code>
+                            {% else %}
+                            <code>{{value}}</code>
+                            {% endif %}
+                            {% unless forloop.last %}
+                            |
+                            {% endunless %}
+                        {% endfor %}
+                        </code>)
+                    {% else %}
+                    (<code class="attribute-type">{{ obj[1].valType }}</code>)
+                    {% endif %}
+                {% endif %}
+                {% if obj[1].role == "object" %}
+                    (<code class="attribute-type">object</code>)
                 {% endif %}
             {% endif %}
 
-
-            {% if obj[1].dflt %}
+            {% if display_default and obj[1].dflt %}
                 <br>default: {{ obj[1].dflt }}
             {% endif %}
 
-
-            {% if obj[1].description %}
+            {% if display_description and obj[1].description %}
             <br>{{ obj[1].description }}
             {% endif %}
 
