--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -2,7 +2,12 @@
     <ul>
     {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "type" %}
         <li>
-            <a class="attribute-name" id="{{parentlink}}-{{obj[0]}}" href="#{{parentlink}}-{{obj[0]}}">
+            {% if toc %}
+                {% assign id="" %}
+            {% else %}
+                {% capture id %}{{parentlink}}-{{obj[0]}}{% endcapture %}
+            {% endif %}
+            <a class="attribute-name" id="{{id}}" href="#{{parentlink}}-{{obj[0]}}">
                 {{ obj[0] }}
             </a>
 
