--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,9 @@
         {% else %}
         <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/api_docs.css">
         {% endif %}
+        {% if page.page_type == "reference" %}
+        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/reference.css">
+        {% endif %}
 
     	<!-- Icon -->
     	<link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
