--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -27,7 +27,8 @@
                         {% endfor %}
                         </code>)
                     {% else %}
-                    (<code class="attribute-type">{{ obj[1].valType }}</code>)
+                    {% assign typekey = obj[1].valType %}
+                    (<code tooltip="{{site.data.plotschema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
                     {% endif %}
                 {% endif %}
                 {% if obj[1].role == "object" %}
