--- a/all_static/css/reference.css
+++ b/all_static/css/reference.css
@@ -19,3 +19,34 @@ code {
 .toc {
     border-right: thin rgb(230,230,230) solid;
 }
+
+/*http://stackoverflow.com/a/25813336/4142536*/
+[tooltip]:before {
+    /* needed - do not touch */
+    content: attr(tooltip);
+    position: absolute;
+    opacity: 0;
+
+    /* customizable */
+    transition: all 0.0s ease;
+    transition-delay: 0.15s;
+    padding: 5px;
+    color: white;
+    border-radius: 1grapx;
+    box-shadow: 2px 2px 1px silver;
+    font-family: "Open sans",verdana,arial,sans-serif;
+}
+
+[tooltip]:hover:before {
+    /* needed - do not touch */
+    opacity: 0.9;
+
+    /* customizable */
+    background: rgb(16, 32, 77);
+    margin-top: -40px;
+    margin-left: 0px;
+}
+
+[tooltip]:not([tooltip-persistent]):before {
+    pointer-events: none;
+}
