--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -5,9 +5,9 @@
             {% if toc %}
                 {% assign id="" %}
             {% else %}
-                {% capture id %}{{parentlink}}-{{obj[0]}}{% endcapture %}
+                {% capture id %}{{include.parentlink}}-{{obj[0]}}{% endcapture %}
             {% endif %}
-            <a class="attribute-name" id="{{id}}" href="#{{parentlink}}-{{obj[0]}}">
+            <a class="attribute-name" id="{{id}}" href="#{{include.parentlink}}-{{obj[0]}}">
                 {{ obj[0] }}
             </a>
 
@@ -44,16 +44,14 @@
             <br>{{ obj[1].description }}
             {% endif %}
 
-
             {% if obj[1].role == "object" %}
                 {% assign parentattribute = attribute %}
-                {% assign oldparentlink = parentlink %}
+                {% capture localparentlink %}{{include.parentlink}}-{{obj[0]}}{% endcapture %}
                 {% assign attribute = obj[1] %}
-                {% capture parentlink %}{{parentlink}}-{{obj[0]}}{% endcapture %}
-                {% include reference-block.html %}
+                {% include reference-block.html parentlink=localparentlink %}
                 {% assign attribute = parrentattribute %}
-                {% assign parentlink = oldparentlink %}
             {% endif %}
+
         </li>
     {% endif %}
     </ul>
