--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -41,7 +41,7 @@
             {% endif %}
 
             {% if display_description and obj[1].description %}
-            <br>{{ obj[1].description }}
+            <br>{{ obj[1].description | escape }}
             {% endif %}
 
             {% if obj[1].role == "object" %}
