describe number bounds

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -26,6 +26,16 @@
                             {% endunless %}
                         {% endfor %}
                         </code>)
+                    {% elsif obj[1].valType == "number" %}
+                        {% if obj[1].min and obj[1].max %}
+                            (<code class="attribute-type">{{ obj[1].valType }} between {{obj[1].min}} and {{obj[1].max}}</code>)
+                        {% elsif obj[1].min %}
+                            (<code class="attribute-type">{{ obj[1].valType }} greater than {{obj[1].min}}</code>)
+                        {% elsif obj[1].max %}
+                            (<code class="attribute-type">{{ obj[1].valType }} less than {{obj[1].min}}</code>)
+                        {% else %}
+                            (<code class="attribute-type">{{ obj[1].valType }}</code>)
+                        {% endif %}
                     {% else %}
                     {% assign typekey = obj[1].valType %}
                     (<code tooltip="{{site.data.plotschema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
