add max+min to "integer" type

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -26,7 +26,7 @@
                             {% endunless %}
                         {% endfor %}
                         </code>)
-                    {% elsif obj[1].valType == "number" %}
+                    {% elsif obj[1].valType == "number" or obj[1].valType == "integer" %}
                         {% if obj[1].min and obj[1].max %}
                             (<code class="attribute-type">{{ obj[1].valType }} between {{obj[1].min}} and {{obj[1].max}}</code>)
                         {% elsif obj[1].min %}
