indicate tooltips with dotted grey underline

--- a/all_static/css/reference.css
+++ b/all_static/css/reference.css
@@ -20,6 +20,10 @@ code {
     border-right: thin rgb(230,230,230) solid;
 }
 
+[tooltip] {
+    border-bottom: thin dotted grey;
+}
+
 /*http://stackoverflow.com/a/25813336/4142536*/
 [tooltip]:before {
     /* needed - do not touch */
