update type to include array of objects, like annotations

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -1,6 +1,6 @@
 <ul>
 {% for obj in attribute %}
-    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "type" %}
+    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "type" and obj[0] != "_isLinkedToArray" %}
         <li>
             {% if toc %}
                 {% assign id="" %}
@@ -43,6 +43,11 @@
                 {% endif %}
                 {% if obj[1].role == "object" %}
                     (<code class="attribute-type">object</code>)
+                    {% if obj[1]._isLinkedToArray %}
+                        (<code tooltip="An {% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s. Each {% raw %}{object}{% endraw %} has one or more of the keys listed below." class="attribute-type">{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s</code>)
+                    {% else %}
+                        (<code tooltip="An {% raw %}{object}{% endraw %} with one or more of the keys listed below." class="attribute-type">{% raw %}{object}{% endraw %}</code>)
+                    {% endif %}
                 {% endif %}
             {% endif %}
 
