simplify variables with display_info

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -11,7 +11,7 @@
                 {{ obj[0] }}
             </a>
 
-            {% if display_type %}
+            {% if display_info %}
                 {% if obj[1].valType %}
                     {% if obj[1].valType == "enumerated" %}
                         (<code class="attribute-type">{{ obj[1].valType }} -
@@ -51,12 +51,11 @@
                 {% endif %}
             {% endif %}
 
-            {% if display_default and obj[1].dflt %}
                 <br>default: {{ obj[1].dflt }}
+            {% if display_info and obj[1].flags %}
             {% endif %}
 
-            {% if display_description and obj[1].description %}
-            <br>{{ obj[1].description | escape }}
+            {% if display_info and obj[1].valType == "flaglist" %}
             {% endif %}
 
             {% if obj[1].role == "object" %}
