tone down the underline for enumerated values

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -14,7 +14,7 @@
             {% if display_info %}
                 {% if obj[1].valType %}
                     {% if obj[1].valType == "enumerated" %}
-                        (<code class="attribute-type">{{ obj[1].valType }} -
+                        (<code tooltip='One of the following items (e.g. {% if obj[1].values[0] != false and obj[1].values[0] != true %}*{{obj[1].values[0]}}*{% else %}{{obj[1].values[0]}}{% endif %}).' class="attribute-type">{{ obj[1].valType }}</code><code> -
                         {% for value in obj[1].values %}
                             {% if value != false and value != true %}
                             <code>"{{value}}"</code>
