--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -16,14 +16,8 @@
                     {% if obj[1].valType == "enumerated" %}
                         (<code tooltip='One of the following items (e.g. {% if obj[1].values[0] != false and obj[1].values[0] != true %}*{{obj[1].values[0]}}*{% else %}{{obj[1].values[0]}}{% endif %}).' class="attribute-type">{{ obj[1].valType }}</code><code> -
                         {% for value in obj[1].values %}
-                            {% if value != false and value != true %}
-                            <code>"{{value}}"</code>
-                            {% else %}
-                            <code>{{value}}</code>
-                            {% endif %}
-                            {% unless forloop.last %}
-                            |
-                            {% endunless %}
+                            {% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}
+                            {% unless forloop.last %}|{% endunless %}
                         {% endfor %}
                         </code>)
                     {% elsif obj[1].valType == "number" or obj[1].valType == "integer" %}
