... "or equal to"
cc @etpinard

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -22,11 +22,11 @@
                         </code>)
                     {% elsif obj[1].valType == "number" or obj[1].valType == "integer" %}
                         {% if obj[1].min and obj[1].max %}
-                            (<code class="attribute-type">{{ obj[1].valType }} between {{obj[1].min}} and {{obj[1].max}}</code>)
+                            (<code class="attribute-type">{{ obj[1].valType }} between or equal to {{obj[1].min}} and {{obj[1].max}}</code>)
                         {% elsif obj[1].min %}
-                            (<code class="attribute-type">{{ obj[1].valType }} greater than {{obj[1].min}}</code>)
+                            (<code class="attribute-type">{{ obj[1].valType }} greater than or equal to {{obj[1].min}}</code>)
                         {% elsif obj[1].max %}
-                            (<code class="attribute-type">{{ obj[1].valType }} less than {{obj[1].min}}</code>)
+                            (<code class="attribute-type">{{ obj[1].valType }} less than or equal to {{obj[1].min}}</code>)
                         {% else %}
                             (<code class="attribute-type">{{ obj[1].valType }}</code>)
                         {% endif %}
